--- a/proj3/styles.css
+++ b/proj3/styles.css
@@ -1,7 +1,102 @@
 
-body{
-	background: white;
+
+
+body {
+  background: #D2DFDC;
+  overflow: hidden;
+  margin: auto;
+
 }
+
+
+.container {
+  margin: 0 auto;
+  width: 700px;
+  height: 653px;
+  position: relative;
+  perspective: 1000px;
+  top: 120px;
+  
+}
+
+.carousel {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+
+.item {
+  display: block;
+  position: absolute;
+  width: 700px;
+  height: 370px;
+  opacity: .9;
+  top: 69px;
+}
+
+.a {
+  transform: rotateY(0deg) translateZ(432.16px);
+  background: #D2DFDC;
+}
+.b {
+  transform: rotateY(90deg) translateZ(432.16px);
+  background: #D2DFDC;
+}
+.c {
+  transform: rotateY(180deg) translateZ(432.16px);
+  background: #D2DFDC;
+}
+.d {
+  transform: rotateY(270deg) translateZ(432.16px);
+  background: #D2DFDC;
+}
+
+#tide{
+	width: 450px;
+	height: 250px;
+	margin-left: 190px;
+	margin-top: 20px;
+}
+
+.about{
+	font-family: 'Special Elite', cursive;
+  font-size: 8px;
+  letter-spacing: .4px;
+  word-spacing: 1px;
+  line-height: 12px;
+
+  height: 300px;
+  width: 310px;
+  position: absolute;
+  color: black;
+  left: 320px;
+  top: 35px;
+}
+
+
+.next, .prev {
+	width: 20px;
+	height: 20px;
+  color: #444;
+  position: absolute;
+  top: 300px;
+  cursor: pointer;
+  background: #CCC;
+  border-radius: 5px;
+  border-top: 1px solid #FFF;
+  box-shadow: 0 5px 0 #999;
+  transition: box-shadow 0.1s, top 0.1s;
+}
+.next:hover, .prev:hover { color: #000; }
+.next:active, .prev:active {
+  top: 304px;
+  box-shadow: 0 1px 0 #999;
+}
+.next { right: 5em; }
+.prev { left: 5em; }
+
 
 
 h2{
@@ -10,129 +105,395 @@ h2{
 	font-weight: 600;
 	font-size: 75pt;
 	text-align: center;
-	font-size: 35pt;
-	line-height: 45px;
+	font-size: 15pt;
+	line-height: 35px;
 	margin-top: -2px;
+	color: black;
 }
 #indoctrination{
-	width: 1250px;
-	height: 590px;
-	background:;
+	margin-top: 15px;
+	width: 700px;
+	height: 370px;
 	position: absolute;
 	font-family: felt-tip-roman, sans-serif;
 	font-style: normal;
 	font-weight: 600;
-	font-size: 60pt;
+	font-size: 25pt;
 	text-align: center;
+	color: black;
 
 }
 
-#draggable {
-  border-color: red;
+.nut{
+	cursor: move;
+	position: absolute;
+	margin-top: 270px;
+	margin-left: 70px;
+	width: 30px;
+	height: 30px;
+	background: ;
+	&:hover {
+    background: darken(gray, 5);
+  }
+}
+
+.nut2{
+	cursor: move;
+	position: absolute;
+	margin-top: 290px;
+	margin-left: 100px;
+	width: 50px;
+	height: 50px;
+	background: ;
+	&:hover {
+    background: darken(gray, 5);
+  }
+}
+
+.nut3{
+	cursor: move;
+	position: absolute;
+	margin-top: 230px;
+	margin-left: 140px;
+	width: 60px;
+	height: 60px;
+	background: ;
+	&:hover {
+    background: darken(gray, 5);
+  }
+}
+
+.nut4{
+	cursor: move;
+	position: absolute;
+	margin-top: 240px;
+	margin-left: 100px;
+	width: 60px;
+	height: 60px;
+	background: ;
+	&:hover {
+    background: darken(gray, 5);
+  }
+}
+
+
+
+.rock{
+	position: absolute;
+}
+
+.one{
+	width: 50px;
+	height: 35px;
+	background: ;
+	margin-left: 80px;
+	margin-top: 200px;
+}
+
+.two{
+	width: 50px;
+	height: 55px;
+	background: ;
+	margin-left: 200px;
+	margin-top: 60px;
+}
+
+.three{
+	width: 50px;
+	height: 55px;
+	background: ;
+	margin-left: 300px;
+	margin-top: 140px;
+}
+
+.four{
+	width: 50px;
+	height: 55px;
+	background: ;
+	margin-left: 500px;
+	margin-top: 240px;
+}
+
+.five{
+	width: 50px;
+	height: 55px;
+	background: ;
+	margin-left: 370px;
+	margin-top: 320px;
+}
+
+.six{
+	width: 50px;
+	height: 55px;
+	background: ;
+	margin-left: 480px;
+	margin-top: 20px;
+}
+
+.seven{
+	width: 50px;
+	height: 55px;
+	background: ;
+	margin-left: 280px;
+	margin-top: 70px;
+}
+
+.tooltip {
+	position: relative;
+	color: #ccc;
+
+	-webkit-transition: all 500ms ease-in-out;	
+}
+
+
+
+.moonrocks .moonrocks-text { 
+	background: black;
+	position: absolute;
+	margin-top: 170px;
+	margin-left: 95px;
+	color: white;
+	font-size: 8px;
+	padding: 6px;
+	font-family: 'Special Elite', cursive;
+	letter-spacing: .4px;
+	word-spacing: 1px;
+	line-height: 10px;
+	opacity: 0;
+	text-align: center;
+	-webkit-transition: all 400ms ease-in-out;
 
 }
 
-.ui-draggable {
-  position:relative;
-  z-index:1;
+.moonrocks:hover {
+	color: black;
+}
+
+.moonrocks:hover .moonrocks-text {
+	opacity: 1;
+}
+
+.moonrocks2 .moonrocks2-text { 
+	background: black;
+	position: absolute;
+	margin-top: 50px;
+	margin-left: 120px;
+	color: white;
+	font-size: 8px;
+	padding: 6px;
+	font-family: 'Special Elite', cursive;
+	letter-spacing: .4px;
+	word-spacing: 1px;
+	line-height: 10px;
+	opacity: 0;
+	text-align: center;
+	-webkit-transition: all 400ms ease-in-out;
+
+}
+
+.moonrocks2:hover {
+	color: black;
+}
+
+.moonrocks2:hover .moonrocks2-text {
+	opacity: 1;
+}
+
+.moonrocks3 .moonrocks3-text { 
+	background: black;
+	position: absolute;
+	margin-top: 115px;
+	margin-left: 235px;
+	color: white;
+	font-size: 8px;
+	padding: 6px;
+	font-family: 'Special Elite', cursive;
+	letter-spacing: .4px;
+	word-spacing: 1px;
+	line-height: 10px;
+	opacity: 0;
+	text-align: center;
+	-webkit-transition: all 400ms ease-in-out;
+
+}
+
+.moonrocks3:hover {
+	color: black;
+}
+
+.moonrocks3:hover .moonrocks3-text {
+	opacity: 1;
+}
+
+.moonrocks4 .moonrocks4-text { 
+	background: black;
+	position: absolute;
+	margin-top: 210px;
+	margin-left: 510px;
+	color: white;
+	font-size: 8px;
+	padding: 6px;
+	font-family: 'Special Elite', cursive;
+	letter-spacing: .4px;
+	word-spacing: 1px;
+	line-height: 10px;
+	opacity: 0;
+	text-align: center;
+	-webkit-transition: all 400ms ease-in-out;
+
+}
+
+.moonrocks4:hover {
+	color: black;
+}
+
+.moonrocks4:hover .moonrocks4-text {
+	opacity: 1;
+}
+
+.moonrocks5 .moonrocks5-text { 
+	background: black;
+	position: absolute;
+	margin-top: 300px;
+	margin-left: 310px;
+	color: white;
+	font-size: 8px;
+	padding: 6px;
+	font-family: 'Special Elite', cursive;
+	letter-spacing: .4px;
+	word-spacing: 1px;
+	line-height: 10px;
+	opacity: 0;
+	text-align: center;
+	-webkit-transition: all 400ms ease-in-out;
+
+}
+
+.moonrocks5:hover {
+	color: black;
+}
+
+.moonrocks5:hover .moonrocks5-text {
+	opacity: 1;
+}
+
+.moonrocks6 .moonrocks6-text { 
+	background: black;
+	position: absolute;
+	margin-top: 20px;
+	margin-left: 350px;
+	color: white;
+	font-size: 8px;
+	padding: 6px;
+	font-family: 'Special Elite', cursive;
+	letter-spacing: .4px;
+	word-spacing: 1px;
+	line-height: 10px;
+	opacity: 0;
+	text-align: center;
+	-webkit-transition: all 400ms ease-in-out;
+
+}
+
+.moonrocks6:hover {
+	color: black;
+}
+
+.moonrocks6:hover .moonrocks6-text {
+	opacity: 1;
+}
+
+.moonrocks7 .moonrocks7-text { 
+	background: black;
+	position: absolute;
+	margin-top: 55px;
+	margin-left: 325px;
+	color: white;
+	font-size: 8px;
+	padding: 6px;
+	font-family: 'Special Elite', cursive;
+	letter-spacing: .4px;
+	word-spacing: 1px;
+	line-height: 10px;
+	opacity: 0;
+	text-align: center;
+	-webkit-transition: all 400ms ease-in-out;
+
+}
+
+.moonrocks7:hover {
+	color: black;
+}
+
+.moonrocks7:hover .moonrocks7-text {
+	opacity: 1;
 }
 
 
 
-#nuts{
-background: ;
-max-height: 0px;
-max-width: 0px;
-margin-left: 570px;
-margin-top: 160px;
+
+.cardmoonr{
+  font-family: 'Special Elite', cursive;
+  font-size: 6px;
+  letter-spacing: .4px;
+  word-spacing: .5px;
+  line-height: 8px;
+  color: black;
+  margin-top: 320px;
+  margin-left: 510px;
+  width: 250px;
+  height: 60px;
+  position: absolute;
 }
 
-.jar{
-	width: 120px;
+
+
+#vader{
+	position: absolute;
 	height: 150px;
-	transform: scale(1.4);
-	background: ;
-	left: 80px;
-	float: left;
-	margin-top: 255px;
-	margin-left: 90px;
+	width: 60px;
+	left: 100px;
+	top: 80px;
+	z-index: .5;
+
 }
 
-.label{
-	width: 70px;
-	height: 35px;
-	background:white;
-	position: absolute;
-	z-index: 1;
-	top: 50px;
-	left: 25px;
-	font-family: felt-tip-roman, sans-serif;
-	font-style: normal;
-	font-weight: 600;
-	font-size: 10pt;
-	line-height: 15px;
-	text-align: center;
-}
-
-.label2{
-	width: 70px;
-	height: 35px;
-	background:white;
-	position: absolute;
-	z-index: 1;
-	top: 50px;
-	left: 25px;
-	font-family: felt-tip-roman, sans-serif;
-	font-style: normal;
-	font-weight: 600;
-	font-size: 10pt;
-	line-height: 35px;
-	text-align: center;
-}
-
-.mid{
-    width:120px;
-    height:120px;
-    background-color:red;
-    position:absolute;
-}
-
-.top{
-    width: 120px;
-    height: 50px;
-    background-color:#F4F4F4;
-    -moz-border-radius: 60px / 25px;
-    -webkit-border-radius: 60px / 25px;
-    border-radius: 60px / 25px;
-    position:absolute;
-    top:-25px;
-}
-
-.bottom{
-    width: 120px;
-    height: 50px;
-    background-color:red;
-    -moz-border-radius: 60px / 25px;
-    -webkit-border-radius: 60px / 25px;
-    border-radius: 60px / 25px;
-    position:absolute;
- 	top: 93px;
-    
-}
-
-#spaceguy{
-	width: 120px;
-	height: 120px;
-	background: ;
-	top: 84%;
-	left: 89%;
-	position: absolute;
+#vader:hover{
 	cursor: pointer;
-	transition: all 1.4s ease-in-out;
 }
 
-#spaceguy:active{
+#detailvader{
 
-	transform: translateY(-620px);
-
+	opacity: 1;
+	width: 400px;
+	height: 340px;
+	z-index: 1;
+	margin-top:12px; 
+	margin-left: 25px;
+	position:absolute;
 }
+
+#pot{
+	height: 80px;
+	width: 90px;
+	position:absolute;
+	
+	margin-left: 400px;
+	margin-top: 100px;
+}
+.potlabel{
+ font-family: 'Special Elite', cursive;
+  font-size: 6px;
+  letter-spacing: .4px;
+  word-spacing: .5px;
+  line-height: 8px;
+  color: black;
+  width: 45px;
+  height: 25px;
+  position: absolute;
+  margin-top: 200px;
+  margin-left: 425px;
+  )
+
+
+
